correctly align compound swatch regardless of the grid's size

--- a/src/theme/all.css
+++ b/src/theme/all.css
@@ -13,7 +13,7 @@
 }
 .gxp-symbolgrid-symbolizer {
     position: absolute;
-    right: 50px;
+    margin-left: 5px;
 }
 .gxp-symbolgrid-feature {
     width: 16px;
